# libjcnsfranka

./: .gitignore  CMakeLists.txt  c_calls.cpp  comtest.cpp  comtest.h  examples_common.h  gripper.cpp  gripper.h  jcnsfranka.cpp  jcnsfranka.h  jcnsfranka_global.h  readme.md  release_minor.sh  release_patch.sh  robot.cpp  robot.h  robot_c.cpp
cmake/: jcnsfrankaConfig.cmake.in
debian/: changelog  control  copyright  rules
demo/: CMakeLists.txt  main.cpp  main.cpp_  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
demo/resources/loads/: fingers1.json  fingers2.json  fingers_with_load1.json  fingers_with_load2.json  stick0.json  stick1.json
pyjcnsfranka/: demo-cryo-load.py  demo-cryo-unload.py  demo-kws1.py  demo.py  readme.md  setup.py
pyjcnsfranka/pyjcnsfranka/: main.py  robot.py
pyjcnsfranka/pyjcnsfranka/routines/: cryo.py  cryo_stick.py
python/: demo.py  readme.md
python/demo/: cryo.py  cryo_stick.py  demo-kws1.py
python/pyjcnsfranka/: robot.py
src/: CMakeLists.txt  comtest.cpp  comtest.h  gripper.cpp  gripper.h  jcnsfranka.h  robot.cpp  robot.h  robot_c.cpp
